# taskforce

./: .env.example  .gitignore  Architecture.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  start-claude.bat
src/taskforce/: __init__.py  for-agent-layerinfo.md
src/taskforce/l1/: for-agent-layerinfo-l1.md
src/taskforce/l1/schema/: __init__.py  for-agent-moduleinfo.md  schema.py
src/taskforce/l2/: __init__.py  for-agent-layerinfo-l2.md
src/taskforce/l2/config/: __init__.py  config.py  for-agent-moduleinfo.md
src/taskforce/l2/cost_logger/: __init__.py  cost_logger.py  for-agent-moduleinfo.md
src/taskforce/l2/panelist/: __init__.py  for-agent-moduleinfo.md  panelist.py
src/taskforce/l2/session_logger/: __init__.py  for-agent-moduleinfo.md  session_logger.py
src/taskforce/l3/: __init__.py  for-agent-layerinfo-l3.md
src/taskforce/l3/roundtable/: for-agent-moduleinfo.md  roundtable.py
src/taskforce/l4/: __init__.py  for-agent-layerinfo-l4.md
src/taskforce/l4/taskforce_facade/: for-agent-moduleinfo.md  taskforce_facade.py
src/taskforce/mcp_wrapper/: __init__.py  __main__.py  mcp_wrapper.py
tests/l1/schema/: test_schema.py
tests/l2/config/: test_config.py
tests/l2/cost_logger/: test_cost_logger.py
tests/l2/panelist/: test_panelist.py
tests/l2/session_logger/: test_session_logger.py
tests/l3/roundtable/: test_roundtable.py
tests/l4/taskforce_facade/: test_taskforce_facade.py
